# xm-marketing-assistant

./: .gitignore  VERSION  VERSION.txt  main.py  pyproject.toml  release.bat  requirements.txt
backend/: app.py
backend/common/: ApiEndpoint.py  ExitHandler.py  InterruptListener.py  SingletonMeta.py  WechatStatusListener.py  build_version.py  custom_enums.py  custom_types.py  json_response.py  path_enum.py  peewee_types.py  utils.py  wx_coord_enum.py  wx_ocr_types.py  wx_size_enum.py
backend/scripts/automation/: AutomationDispatcher.py  automation.py  automation_state.py  simple_workflow.py
backend/scripts/config/: __init__.py  app_config.py
backend/scripts/controller/: base.py  boss.py  cultivation_account.py  social_media.py  wechat.py
backend/scripts/db/: SimpleOrm.py  add_contact.py  bulk_send.py  bulk_send_status.py  contact.py  conversation.py  cultivation_account_action_log_db.py  cultivation_account_plan_db.py  leave_trace_exposure_history_db.py  message.py  message_v2.py  msg_status.py  silence_contact.py  social_media_users.py  targeted_exposure_history_db.py  v4_contact.py  v4_message.py  v4_session.py  wx_contact.py
backend/scripts/environment/: __init__.py  display_monitor.py  system_info.py  system_info_reporter.py
config/: settings.yaml
src/: __init__.py  ai_client.py  auto_reply.py  prompt_manager.py  wechat_add_friend.py  wechat_chat_history.py  wechat_contact_sync.py  wechat_db.py  wechat_db_export.py  wechat_mass_send.py  wechat_moment_marketing.py  wechat_moments.py  wechat_new_contact.py  wechat_ocr.py  wechat_uia.py
(+85 files in other folders)
